--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>TextNote</title>
-        <link rel="stylesheetnote" href="stylesheetnote.css">
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <h1 class="textcontents">ノートてすと</h1>
